# app/Models/Country.php
@@ -1,0 +1,41 @@
+<?php
+
+namespace App\Models;
+
+use Database\Factories\CountryFactory;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Factories\Factory;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\HasMany;
+
+class Country extends Model
+{
+    use HasFactory;
+    protected $table = 'countries';
+    public $timestamps = false;
+    protected $primaryKey = 'id';
+    protected $fillable = ['id', 'name', 'code', 'status'];
+
+
+    /**
+     * Create a new factory instance for the model.
+     *
+     * @return Factory
+     */
+    protected static function newFactory(): Factory
+    {
+        return CountryFactory::new();
+    }
+
+
+    /**
+     * Get the cities for the country.
+     *
+     * @return HasMany
+     */
+    public function comments(): HasMany
+    {
+        return $this->hasMany(City::class);
+    }
+
+}
