# routes/api.php
@@ -22,4 +22,12 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 
 Route::prefix('v1')->group(function() {
     Route::get('index',[Controllers\Api\V1\IndexController::class, 'index']);
+
+    Route::prefix('admin')->group(function(){
+        Route::get('country',[Controllers\Api\V1\Admin\CountryController::class, 'index']);
+        Route::get('country/{id}',[Controllers\Api\V1\Admin\CountryController::class, 'show']);
+        Route::post('country',[Controllers\Api\V1\Admin\CountryController::class, 'store']);
+        Route::put('country/{id}',[Controllers\Api\V1\Admin\CountryController::class, 'update']);
+        Route::delete('country/{id}',[Controllers\Api\V1\Admin\CountryController::class, 'destroy']);
+    });
 });
